--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
-                <img src="https://placehold.co/400x400/0f172a/94a3b8?text=Your+Photo" alt="Junseong Park Profile Picture" class="rounded-full w-64 h-64 md:w-80 md:h-80 object-cover border-4 border-slate-700 shadow-lg">
+                <img src="images/JunPhoto.jpg" alt="Junseong Park Profile Picture" class="rounded-full w-64 h-64 md:w-80 md:h-80 object-cover border-4 border-slate-700 shadow-lg">
             </div>
         </section>
 
