--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <ul class="list-disc list-inside text-slate-400 space-y-2">
                     <li data-lang="story_commitment_1"><b>High School</b>: Student Leadership Team (Discipline & Order Committee)</li>
                     <li data-lang="story_commitment_2"><b>Middle School</b>: Student Council Member & Broadcasting Club Leader</li>
-                    <li data-lang="story_commitment_3"><b></b>Elementary School</b>: Student Library Assistant</li>
+                    <li data-lang="story_commitment_3"><b>Elementary School</b>: Student Library Assistant</li>
                 </ul>
             </div>
         </section>
