--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             <div class="mt-12 bg-slate-800 p-8 rounded-xl shadow-lg max-w-3xl mx-auto">
                 <h3 class="text-xl font-bold text-white mb-4" data-lang="story_commitment_title">A Lifelong Commitment to Leadership & Community</h3>
                 <ul class="list-disc list-inside text-slate-400 space-y-2">
-                    <li data-lang="story_commitment_1"><b>High School</b>: Student Leadership Team (Discipline & Order Committee)</li>
-                    <li data-lang="story_commitment_2"><b>Middle School</b>: Student Council Member & Broadcasting Club Leader</li>
-                    <li data-lang="story_commitment_3"><b>Elementary School</b>: Student Library Assistant</li>
+                    <li data-lang="story_commitment_1">High School: Student Leadership Team (Discipline & Order Committee)</li>
+                    <li data-lang="story_commitment_2">Middle School: Student Council Member & Broadcasting Club Leader</li>
+                    <li data-lang="story_commitment_3">Elementary School: Student Library Assistant</li>
                 </ul>
             </div>
         </section>
@@ -308,9 +308,9 @@
                 story_title: "My Story: From South Korea to South Texas",
                 story_subtitle: "My journey began in South Korea, where I was always drawn to the role of a leader—someone who improves their environment and helps their peers. This passion led me from leading student groups in my youth, to leading a technical team in the military, to mastering engineering in the competitive automotive supply chain. A desire for growth brought me to the U.S. and UTRGV, where I deepened my expertise in Computer Science and AI, and am now honing my business acumen through an MBA. This unique path has forged my mission: to weave these diverse threads of technology, leadership, and education together to create new value.",
                 story_commitment_title: "A Lifelong Commitment to Leadership & Community",
-                story_commitment_1: <b>High School</b>: Student Leadership Team (Discipline & Order Committee)",
-                story_commitment_2: "<b>Middle School</b>: Student Council Member & Broadcasting Club Leader",
-                story_commitment_3: "<b>Elementary School</b>: Student Library Assistant",
+                story_commitment_1: "High School: Student Leadership Team (Discipline & Order Committee)",
+                story_commitment_2: "Middle School: Student Council Member & Broadcasting Club Leader",
+                story_commitment_3: "Elementary School: Student Library Assistant",
                 expertise_title: "My Expertise",
                 expertise_subtitle: "A unique blend of skills to teach technology from concept to creation.",
                 expertise_card1_title: "AI & Software Development",
@@ -371,9 +371,9 @@
                 story_title: "나의 이야기: 대한민국에서 사우스 텍사스까지",
                 story_subtitle: "저의 여정은 대한민국에서 시작되었습니다. 저는 항상 주변 환경을 개선하고 동료들을 돕는 리더의 역할에 매력을 느껴왔습니다. 이러한 열정은 어린 시절 학생 그룹을 이끄는 것에서부터, 군대에서 기술팀을 지휘하고, 경쟁이 치열한 자동차 공급망에서 엔지니어링 기술을 마스터하는 것으로 이어졌습니다. 성장에 대한 갈망은 저를 미국과 UTRGV로 이끌었고, 이곳에서 컴퓨터 과학과 AI에 대한 전문성을 심화시켰으며, 현재는 MBA를 통해 비즈니스 통찰력을 연마하고 있습니다. 이 독특한 길은 기술, 리더십, 교육이라는 다양한 실들을 하나로 엮어 새로운 가치를 창출하려는 저의 사명을 만들어 주었습니다.",
                 story_commitment_title: "리더십과 커뮤니티에 대한 오랜 헌신",
-                story_commitment_1: "<b>고등학교</b>: 학생 리더십 팀 (선도부)",
-                story_commitment_2: "<b>중학교</b>: 학생회 임원 & 방송반 리더",
-                story_commitment_3: "<b>초등학교</b>: 도서관 학생 어시스턴트",
+                story_commitment_1: "고등학교: 학생 리더십 팀 (선도부)",
+                story_commitment_2: "중학교: 학생회 임원 & 방송반 리더",
+                story_commitment_3: "초등학교: 도서관 학생 어시스턴트",
                 expertise_title: "나의 전문성",
                 expertise_subtitle: "컨셉 구상부터 실제 제작까지, 기술을 가르치기 위한 독보적인 역량의 조합.",
                 expertise_card1_title: "AI & 소프트웨어 개발",
@@ -434,9 +434,9 @@
                 story_title: "Mi Historia: De Corea del Sur al Sur de Texas",
                 story_subtitle: "Mi viaje comenzó en Corea del Sur, donde siempre me sentí atraído por el papel de un líder, alguien que mejora su entorno y ayuda a sus compañeros. Esta pasión me llevó desde liderar grupos estudiantiles en mi juventud, a dirigir un equipo técnico en el ejército, hasta dominar la ingeniería en la competitiva cadena de suministro automotriz. El deseo de crecer me trajo a los EE. UU. y a UTRGV, donde profundicé mi experiencia en Ciencias de la Computación e IA, y ahora estoy perfeccionando mi perspicacia para los negocios a través de un MBA. Este camino único ha forjado mi misión: entrelazar estos diversos hilos de tecnología, liderazgo y educación para crear un nuevo valor.",
                 story_commitment_title: "Un Compromiso de por Vida con el Liderazgo y la Comunidad",
-                story_commitment_1: "<b>Bachillerato</b>: Equipo de Liderazgo Estudiantil (Comité de Disciplina y Orden)",
-                story_commitment_2: "<b>Secundaria</b>: Miembro del Consejo Estudiantil y Líder del Club de Radiodifusión",
-                story_commitment_3: "<b>Primaria</b>: Asistente de Biblioteca Estudiantil",
+                story_commitment_1: "Bachillerato: Equipo de Liderazgo Estudiantil (Comité de Disciplina y Orden)",
+                story_commitment_2: "Secundaria: Miembro del Consejo Estudiantil y Líder del Club de Radiodifusión",
+                story_commitment_3: "Primaria: Asistente de Biblioteca Estudiantil",
                 expertise_title: "Mi Pericia",
                 expertise_subtitle: "Una mezcla única de habilidades para enseñar tecnología desde el concepto hasta la creación.",
                 expertise_card1_title: "IA y Desarrollo de Software",
