update beehive link

--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@
                             <strong class="text-slate-300">Problem:</strong> The USDA needed a way to monitor honeybee populations in real-time to study environmental impacts.<br>
                             <strong class="text-slate-300">Contribution:</strong> As a researcher, I contributed to the development of a real-time AI/IoT monitoring system using Jetson Nano and TensorFlow. My work involved fabricating custom hardware enclosures, installing the camera network, and assisting with the computer vision models.
                         </div>
+                        <div class="mt-4">
+                            <a href="https://miutrgv.github.io/research/bee-monitoring.html" target="_blank" rel="noopener noreferrer" class="text-sky-400 font-semibold hover:underline">View Project Details &rarr;</a>
                     </div>
                 </div>
             </div>
