--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
                 <div class="flex flex-col md:flex-row items-center gap-10">
                     <div class="md:w-1/2">
                         <div class="grid grid-cols-2 gap-4">
-                             <img src="https://placehold.co/300x200/0f172a/34d399?text=Beehive+System+1" alt="IntelliBeeHive System" class="rounded-lg shadow-md w-full h-full object-cover">
-                            <img src="https://placehold.co/300x200/0f172a/34d399?text=Beehive+System+2" alt="IntelliBeeHive Enclosure" class="rounded-lg shadow-md w-full h-full object-cover">
-                            <img src="https://placehold.co/300x200/0f172a/34d399?text=Beehive+System+3" alt="IntelliBeeHive Data" class="rounded-lg shadow-md w-full h-full object-cover">
-                            <img src="https://placehold.co/300x200/0f172a/34d399?text=Beehive+System+4" alt="IntelliBeeHive Camera" class="rounded-lg shadow-md w-full h-full object-cover">
+                             <img src="images/beehive1.jpg" alt="IntelliBeeHive System" class="rounded-lg shadow-md w-full h-full object-cover">
+                            <img src="images/beehive2.jpg" alt="IntelliBeeHive Enclosure" class="rounded-lg shadow-md w-full h-full object-cover">
+                            <img src="images/beehive3.jpg" alt="IntelliBeeHive Data" class="rounded-lg shadow-md w-full h-full object-cover">
+                            <img src="images/beehive4.jpg" alt="IntelliBeeHive Camera" class="rounded-lg shadow-md w-full h-full object-cover">
                         </div>
                     </div>
                     <div class="md:w-1/2">
