--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
                 <div class="flex flex-col md:flex-row items-center gap-10">
                     <div class="md:w-1/2">
-                        <img src="https://placehold.co/600x400/0f172a/fb923c?text=Students+Workshop" alt="Engineering Program" class="rounded-xl shadow-lg w-full object-cover">
+                        <img src="images/industry.jpg" alt="Engineering Program" class="rounded-xl shadow-lg w-full object-cover">
                     </div>
                     <div class="md:w-1/2">
                         <h3 class="text-2xl font-bold text-white" data-lang="case1_title">Foundational Engineering Program</h3>
@@ -197,7 +197,7 @@
                 </div>
                 <div class="flex flex-col md:flex-row-reverse items-center gap-10">
                     <div class="md:w-1/2">
-                        <img src="images/military.png" alt="Military Leadership" class="rounded-xl shadow-lg w-full object-cover">
+                        <img src="images/military.jpg" alt="Military Leadership" class="rounded-xl shadow-lg w-full object-cover">
                     </div>
                     <div class="md:w-1/2">
                         <h3 class="text-2xl font-bold text-white" data-lang="case2_title">Artillery Maintenance Team Leader</h3>
