--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                  <div class="flex flex-col md:flex-row-reverse items-center gap-10">
                     <div class="md:w-1/2">
-                        <img src="https://placehold.co/600x400/0f172a/818cf8?text=FinitUp+Platform" alt="Finitup AI Platform" class="rounded-xl shadow-lg w-full object-cover">
+                        <img src="images/finitup.com" alt="Finitup AI Platform" class="rounded-xl shadow-lg w-full object-cover">
                     </div>
                     <div class="md:w-1/2">
                         <h3 class="text-2xl font-bold text-white" data-lang="case_finitup_title">FinitUp - AI Stock Analysis</h3>
