--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="mt-16 space-y-20">
                 <div class="flex flex-col md:flex-row items-center gap-10">
                     <div class="md:w-1/2">
-                        <img src="https://placehold.co/600x400/0f172a/60a5fa?text=UTRGV+AI+Club" alt="UTRGV AI Club" class="rounded-xl shadow-lg w-full object-cover">
+                        <img src="images/aiclub.jpg" alt="UTRGV AI Club" class="rounded-xl shadow-lg w-full object-cover">
                     </div>
                     <div class="md:w-1/2">
                         <h3 class="text-2xl font-bold text-white" data-lang="case_aiclub_title">UTRGV AI Club</h3>
