--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                 <div class="bg-slate-800 p-6 rounded-xl">
                     <h3 class="text-lg font-bold text-white mb-3" data-lang="skills_cat3_title">Engineering & Prototyping</h3>
                     <ul class="text-slate-400 space-y-2">
-                        <li><strong class="text-slate-300">CAD Software:</strong> SolidWorks, AutoCAD</li>
-                        <li><strong class="text-slate-300">Fabrication:</strong> 3D Printing (SLA/FDM), CNC, Laser Cutting</li>
-                        <li><strong class="text-slate-300">Systems:</strong> Robotics, Drone Technology</li>
+                        <li><strong class="text-slate-300">CAD Software:</strong> SolidWorks, AutoCAD, Fusion360, Ansys</li>
+                        <li><strong class="text-slate-300">Fabrication:</strong> 3D Printing (SLA/FDM/SLS), CNC, Laser Cutting, 3D Scanner</li>
+                        <li><strong class="text-slate-300">Systems:</strong> Robotics, Drone Technology, Motion Capture</li>
                     </ul>
                 </div>
             </div>
