--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
                 <div class="mt-8 flex justify-center md:justify-start space-x-4">
                     <a href="#casestudies" class="bg-sky-500 hover:bg-sky-600 text-white font-semibold px-6 py-3 rounded-lg transition-colors" data-lang="hero_btn_work">View My Work</a>
                     <a href="mailto:junesong56@gmail.com" class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-6 py-3 rounded-lg transition-colors" data-lang="hero_btn_contact">Get In Touch</a>
+                    <a href="https://drive.google.com/file/d/1nuhILDUz9JbYDJshQJlHhUzIJkEs8WDc/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="bg-green-500 hover:bg-green-600 text-white font-semibold px-6 py-3 rounded-lg transition-colors inline-flex items-center" data-lang="resume_download_btn">
+                        <svg class="w-5 h-5 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                            <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
+                        </svg>
+                        Download Resume
+                    </a>
                 </div>
             </div>
             <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center">
@@ -370,6 +376,7 @@
                 hero_subtitle: "Hello! I'm Junseong Park. My goal is to shape the next generation of tech leaders by combining hands-on engineering, advanced AI, and strategic business principles to teach real-world problem-solving skills.",
                 hero_btn_work: "View My Work",
                 hero_btn_contact: "Get In Touch",
+                resume_download_btn: "Download Resume (PDF)",
                 story_title: "My Story: From South Korea to South Texas",
                 story_subtitle: "My journey began in South Korea, where I was always drawn to the role of a leader—someone who improves their environment and helps their peers. This passion led me from leading student groups in my youth, to leading a technical team in the military, to mastering engineering in the competitive automotive supply chain. A desire for growth brought me to the U.S. and UTRGV, where I deepened my expertise in Computer Science and AI, and am now honing my business acumen through an MBA. This unique path has forged my mission: to weave these diverse threads of technology, leadership, and education together to create new value.",
                 story_commitment_title: "A Lifelong Commitment to Leadership & Community",
@@ -390,7 +397,6 @@
                 skills_cat2_title: "AI & Data Science",
                 skills_cat3_title: "Engineering & Prototyping",
                 education_title: "Education",
-                resume_download_btn: "Download Resume (PDF)",
                 initiative_tag: "New Initiative",
                 initiative_title: "Founding the UTRGV AI Club",
                 initiative_desc: "I am currently in the process of establishing the official UTRGV AI Club, a forward-thinking community for students, graduate students, Ph.D. candidates, and alumni. Our mission is to make AI accessible to all, fostering innovation and preparing the next generation of leaders in the Rio Grande Valley.",
