--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="bg-slate-800 p-6 rounded-xl">
                     <h3 class="text-lg font-bold text-white mb-3" data-lang="skills_cat1_title">Programming & Software</h3>
                     <ul class="text-slate-400 space-y-2">
-                        <li><strong class="text-slate-300">Languages:</strong> Python, Java, C++</li>
+                        <li><strong class="text-slate-300">Languages:</strong> Python, C++</li>
                         <li><strong class="text-slate-300">AI Frameworks:</strong> TensorFlow, PyTorch</li>
                     </ul>
                 </div>
@@ -131,7 +131,7 @@
                     <h3 class="text-lg font-bold text-white mb-3" data-lang="skills_cat3_title">Engineering & Prototyping</h3>
                     <ul class="text-slate-400 space-y-2">
                         <li><strong class="text-slate-300">CAD:</strong> SolidWorks, AutoCAD, Fusion360</li>
-                        <li><strong class="text-slate-300">Fabrication:</strong> 3D Printing, CNC, Laser Cut</li>
+                        <li><strong class="text-slate-300">Fabrication:</strong> 3D Printing, CNC, Laser Cut, 3D Scanner</li>
                         <li><strong class="text-slate-300">Systems:</strong> Robotics, Drones, Motion Capture</li>
                     </ul>
                 </div>
@@ -198,7 +198,7 @@
             <div class="mt-16 space-y-20">
                 <div class="flex flex-col md:flex-row items-center gap-10">
                     <div class="md:w-1/2">
-                        <img src="images/industry.jpg" alt="Automotive Prototyping" class="rounded-xl shadow-lg w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=Prototyping';">
+                        <img src="images/creativecenter.jpg" alt="Automotive Prototyping" class="rounded-xl shadow-lg w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=Prototyping';">
                     </div>
                     <div class="md:w-1/2">
                         <h3 class="text-2xl font-bold text-white" data-lang="case1_title">Chapter 1: The Foundation in Precision</h3>
@@ -224,7 +224,7 @@
 
                 <div class="flex flex-col md:flex-row items-center gap-10">
                     <div class="md:w-1/2">
-                        <img src="images/finitup.jpg" alt="Engineering Lab" class="rounded-xl shadow-lg w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=University+Lab';">
+                        <img src="images/industry.jpg" alt="Engineering Lab" class="rounded-xl shadow-lg w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=University+Lab';">
                     </div>
                     <div class="md:w-1/2">
                         <h3 class="text-2xl font-bold text-white" data-lang="case3_title">Chapter 3: The Spark of Education</h3>
@@ -237,7 +237,7 @@
 
                  <div class="flex flex-col md:flex-row-reverse items-center gap-10">
                     <div class="md:w-1/2">
-                        <img src="images/beehive1.jpg" alt="IntelliBeeHive System" class="rounded-xl shadow-lg w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=AI+Research';">
+                        <img src="images/beehive.jpg" alt="IntelliBeeHive System" class="rounded-xl shadow-lg w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=AI+Research';">
                     </div>
                     <div class="md:w-1/2">
                         <h3 class="text-2xl font-bold text-white" data-lang="case4_title">Chapter 4: The Confirmation</h3>
