Update juouly with numbers

--- a/index.html
+++ b/index.html
@@ -343,14 +343,14 @@
                 case2_desc: "<p>Leading a maintenance team taught me that technical skill alone isn't enough. I had to not only solve problems but also train my team to do the same. This was my first real taste of teaching – the challenge of transferring complex knowledge clearly and effectively under pressure.</p>",
                 case3_title: "Chapter 3: The Spark of Education",
                 case3_role: "University Lab Technician & Instructor",
-                case3_desc: "<p>This role was a turning point. While helping students with their projects, I noticed that everyone learned differently. The challenge wasn't just knowing the material, but finding unique ways to explain it. I began to realize that I enjoyed the process of demystifying technology for others, and my interest in education was born.</p>",
+                case3_desc: "<p>This role was a turning point. While managing a lab with over 50 machines and 99% uptime, I also had the opportunity to teach. I noticed that everyone learned differently, and I began developing unique ways to explain it. This is where my passion for empowering others through education was born.</p>",
                 case4_title: "Chapter 4: The Confirmation",
                 case4_role: "AI Researcher & Teaching Assistant at UTRGV",
-                case4_desc: "<p>At UTRGV, I finally put my budding educational philosophy to the test. I applied my advanced AI knowledge to solve a real-world research problem for the USDA, while simultaneously using my new teaching methods to help undergraduate students succeed. Seeing them grasp complex ideas confirmed that my practical, hands-on approach worked. This is where my dream for education truly took shape.</p>",
+                case4_desc: "<p>At UTRGV, I put my budding educational philosophy to the test. I applied my AI knowledge to a real-world USDA research project while teaching programming concepts to over 300 undergraduate students. Seeing them grasp complex ideas confirmed that my practical, hands-on approach worked. This is where my dream for education truly took shape.</p>",
                 case4_link: "View the Research Project &rarr;",
                 case5_title: "Chapter 5: The Synthesis",
                 case5_role: "Founder & Developer of FinitUp",
-                case5_desc: "<p>My journey led me to a question: how to synthesize my skills in engineering, AI, and business? My answer is FinitUp, an AI stock analysis platform I am currently building. This project is my personal 'Learning by Building' exercise, where I apply my entire philosophy to create tangible value at the intersection of technology and finance.</p>",
+                case5_desc: "<p>To truly understand how technology creates business value, I decided to build a solution myself. FinitUp is my ongoing project to build an AI-powered stock analysis platform, directly applying the principles from my A-grade MBA courses in Finance and Economics. This is my 'Learning by Building' philosophy in action, merging my entire skillset to create tangible value.</p>",
                 case5_link: "Visit Finitup.com &rarr;",
                 case6_title: "Chapter 6: The Current Mission",
                 case6_role: "Founder of the UTRGV AI Club",
@@ -390,14 +390,14 @@
                 case2_desc: "<p>정비팀을 이끌면서 기술력만으로는 충분하지 않다는 것을 배웠습니다. 문제를 해결할 뿐만 아니라 팀원들도 똑같이 할 수 있도록 훈련시켜야 했습니다. 이것이 저의 첫 번째 진정한 교육 경험이었습니다 – 압박감 속에서 복잡한 지식을 명확하고 효과적으로 전달하는 도전 과제였습니다.</p>",
                 case3_title: "3장: 교육의 불꽃",
                 case3_role: "대학 연구실 기술자 & 강사",
-                case3_desc: "<p>이 역할은 전환점이었습니다. 학생들의 프로젝트를 도우면서 저는 모두가 다르게 배운다는 것을 알아차렸습니다. 도전 과제는 단지 자료를 아는 것이 아니라, 그것을 설명할 독특한 방법을 찾는 것이었습니다. 저는 다른 사람들을 위해 기술의 신비를 벗겨내는 과정에서 즐거움을 느끼기 시작했고, 교육에 대한 저의 관심이 태어났습니다.</p>",
+                case3_desc: "<p>이 역할은 전환점이었습니다. 50대가 넘는 장비를 99%의 가동률로 관리하면서 동시에 가르칠 기회도 있었습니다. 저는 모두가 다르게 배운다는 것을 알아차렸고, 그것을 설명할 독특한 방법을 개발하기 시작했습니다. 이곳에서 교육을 통해 다른 사람들에게 힘을 실어주는 것에 대한 저의 열정이 태어났습니다.</p>",
                 case4_title: "4장: 확신",
                 case4_role: "UTRGV AI 연구원 & 조교",
-                case4_desc: "<p>UTRGV에서 저는 마침내 싹트기 시작한 저의 교육 철학을 시험해 볼 수 있었습니다. 저는 USDA를 위한 실제 연구 문제를 해결하기 위해 저의 고급 AI 지식을 적용했고, 동시에 학부생들의 성공을 돕기 위해 저의 새로운 교수법을 사용했습니다. 그들이 복잡한 아이디어를 파악하는 것을 보면서 저의 실용적이고 직접적인 접근 방식이 효과가 있다는 것을 확인했습니다. 이곳에서 교육에 대한 저의 꿈이 진정으로 구체화되었습니다.</p>",
+                case4_desc: "<p>UTRGV에서 저는 마침내 싹트기 시작한 저의 교육 철학을 시험해 볼 수 있었습니다. 저는 USDA를 위한 실제 연구 문제를 해결하기 위해 저의 고급 AI 지식을 적용했고, 동시에 300명 이상의 학부생들에게 프로그래밍 개념을 가르쳤습니다. 그들이 복잡한 아이디어를 파악하는 것을 보면서 저의 실용적이고 직접적인 접근 방식이 효과가 있다는 것을 확인했습니다. 이곳에서 교육에 대한 저의 꿈이 진정으로 구체화되었습니다.</p>",
                 case4_link: "연구 프로젝트 보기 &rarr;",
                 case5_title: "5장: 종합",
                 case5_role: "FinitUp 창립자 & 개발자",
-                case5_desc: "<p>저의 여정은 하나의 질문으로 귀결되었습니다: 엔지니어링, AI, 비즈니스 역량을 어떻게 종합할 수 있을까? 그 답이 바로 제가 현재 구축 중인 AI 주식 분석 플랫폼, FinitUp입니다. 이 프로젝트는 저의 '만들면서 배운다'는 철학을 실천하며 기술과 금융의 교차점에서 실질적인 가치를 창출하는 저의 개인적인 도전입니다.</p>",
+                case5_desc: "<p>기술이 어떻게 비즈니스 가치를 창출하는지 진정으로 이해하기 위해, 저는 직접 솔루션을 만들기로 결심했습니다. FinitUp은 제가 현재 구축 중인 AI 기반 주식 분석 플랫폼으로, 금융 및 경제학 MBA 과정에서 A 등급을 받은 원칙들을 직접 적용하고 있습니다. 이것이 바로 저의 '만들면서 배운다'는 철학의 실천이며, 저의 모든 기술을 융합하여 실질적인 가치를 창출하는 과정입니다.</p>",
                 case5_link: "Finitup.com 방문하기 &rarr;",
                 case6_title: "6장: 현재의 임무",
                 case6_role: "UTRGV AI 클럽 창립자",
@@ -437,14 +437,14 @@
                 case2_desc: "<p>Liderar un equipo de mantenimiento me enseñó que la habilidad técnica por sí sola no es suficiente. No solo tenía que resolver problemas, sino también capacitar a mi equipo para hacer lo mismo. Esta fue mi primera experiencia real con la enseñanza: el desafío de transferir conocimientos complejos de manera clara y efectiva bajo presión.</p>",
                 case3_title: "Capítulo 3: La Chispa de la Educación",
                 case3_role: "Técnico de Laboratorio e Instructor Universitario",
-                case3_desc: "<p>Este rol fue un punto de inflexión. Mientras ayudaba a los estudiantes con sus proyectos, noté que todos aprendían de manera diferente. El desafío no era solo conocer el material, sino encontrar formas únicas de explicarlo. Comencé a darme cuenta de que disfrutaba el proceso de desmitificar la tecnología para otros, y así nació mi interés por la educación.</p>",
+                case3_desc: "<p>Este rol fue un punto de inflexión. Mientras gestionaba un laboratorio con más de 50 máquinas y un 99% de tiempo de actividad, también tuve la oportunidad de enseñar. Noté que todos aprendían de manera diferente y comencé a desarrollar formas únicas de explicarlo. Aquí nació mi pasión por empoderar a otros a través de la educación.</p>",
                 case4_title: "Capítulo 4: La Confirmación",
                 case4_role: "Investigador de IA y Asistente de Cátedra en UTRGV",
-                case4_desc: "<p>En UTRGV, finalmente puse a prueba mi incipiente filosofía educativa. Apliqué mis conocimientos avanzados de IA para resolver un problema de investigación del mundo real para el USDA, mientras que simultáneamente usaba mis nuevos métodos de enseñanza para ayudar a los estudiantes de pregrado a tener éxito. Verlos comprender ideas complejas confirmó que mi enfoque práctico y directo funcionaba. Aquí es donde mi sueño por la educación realmente tomó forma.</p>",
+                case4_desc: "<p>En UTRGV, puse a prueba mi incipiente filosofía educativa. Apliqué mis conocimientos de IA a un problema de investigación del USDA del mundo real mientras enseñaba conceptos de programación a más de 300 estudiantes de pregrado. Verlos comprender ideas complejas confirmó que mi enfoque práctico funcionaba. Aquí es donde mi sueño por la educación realmente tomó forma.</p>",
                 case4_link: "Ver el Proyecto de Investigación &rarr;",
                 case5_title: "Capítulo 5: La Síntesis",
                 case5_role: "Fundador y Desarrollador de FinitUp",
-                case5_desc: "<p>Mi viaje me llevó a una pregunta: ¿cómo sintetizar mis habilidades en ingeniería, IA y negocios? Mi respuesta es FinitUp, una plataforma de análisis de acciones con IA que estoy construyendo. Este proyecto es mi ejercicio personal de 'Aprender Construyendo', donde aplico toda mi filosofía para crear valor tangible en la intersección de la tecnología y las finanzas.</p>",
+                case5_desc: "<p>Para entender verdaderamente cómo la tecnología crea valor empresarial, decidí construir una solución yo mismo. FinitUp es mi proyecto en curso para construir una plataforma de análisis de acciones impulsada por IA, aplicando directamente los principios de mis cursos de MBA con calificación A en Finanzas y Economía. Este es mi 'Aprender Construyendo' en acción, fusionando todo mi conjunto de habilidades para crear valor tangible.</p>",
                 case5_link: "Visita Finitup.com &rarr;",
                 case6_title: "Capítulo 6: La Misión Actual",
                 case6_role: "Fundador del Club de IA de UTRGV",
