--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <style type="text/tailwindcss">
-
         body {
             font-family: 'Inter', sans-serif;
             background-color: #0f172a; /* bg-slate-900 */
@@ -32,7 +31,9 @@
         ::-webkit-scrollbar-thumb:hover {
             background: #64748b;
         }
-        /* .section-title is no longer needed here as styles are applied directly */
+        .section-title {
+            @apply font-poppins text-5xl sm:text-6xl font-bold text-white text-center;
+        }
         .section-subtitle {
             @apply text-center mt-4 text-lg text-slate-400 max-w-3xl mx-auto;
         }
@@ -50,6 +51,7 @@
 </head>
 <body>
 
+    <!-- Header and Navigation -->
     <header class="bg-slate-900/95 backdrop-blur-lg sticky top-0 z-50 shadow-lg border-b border-slate-800">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#" class="text-xl font-poppins font-bold text-white">Junseong Park</a>
@@ -74,12 +76,14 @@
     </header>
 
     <main class="container mx-auto px-6 relative">
+        <!-- Language Switcher -->
         <div class="absolute top-6 right-6 z-10 flex items-center space-x-2">
             <button class="lang-btn active" data-lang-switch="en">EN</button>
             <button class="lang-btn" data-lang-switch="es">ES</button>
             <button class="lang-btn" data-lang-switch="ko">KO</button>
         </div>
 
+        <!-- 1. Hero Section -->
         <section class="py-20 md:py-32 flex flex-col-reverse md:flex-row items-center">
             <div class="md:w-2/3 text-center md:text-left">
                 <h1 class="text-4xl md:text-6xl font-poppins font-bold text-white leading-tight" data-lang="hero_title">Connecting Ideas to Reality Through Technology</h1>
@@ -105,8 +109,9 @@
             </div>
         </section>
 
+        <!-- 2. Tech Stack & Skills -->
         <section id="skills" class="py-20">
-            <h2 class="font-poppins text-3xl sm:text-4xl font-bold text-white text-center" data-lang="skills_title">My Core Competencies</h2>
+            <h2 class="section-title" data-lang="skills_title">My Core Competencies</h2>
             <p class="section-subtitle" data-lang="skills_subtitle">These are the tools and technologies I've mastered through hands-on application.</p>
             <div class="mt-12 max-w-5xl mx-auto grid md:grid-cols-3 gap-8">
                 <div class="bg-slate-800 p-6 rounded-xl">
@@ -133,8 +138,9 @@
             </div>
         </section>
 
+        <!-- 3. Professional Experience -->
         <section id="experience" class="py-20">
-            <h2 class="font-poppins text-3xl sm:text-4xl font-bold text-white text-center" data-lang="experience_title">Professional Experience</h2>
+            <h2 class="section-title" data-lang="experience_title">Professional Experience</h2>
             <p class="section-subtitle" data-lang="experience_subtitle">A timeline of my key roles and responsibilities.</p>
             <div class="mt-12 relative border-l-2 border-slate-700 max-w-3xl mx-auto">
                 <div class="mb-10 ml-8">
@@ -170,8 +176,9 @@
             </div>
         </section>
 
+        <!-- 4. Education -->
         <section id="education" class="py-20">
-            <h2 class="font-poppins text-3xl sm:text-4xl font-bold text-white text-center" data-lang="education_title">Education</h2>
+            <h2 class="section-title" data-lang="education_title">Education</h2>
             <div class="mt-12 max-w-3xl mx-auto space-y-8">
                 <div class="bg-slate-800 p-8 rounded-xl shadow-lg">
                     <h3 class="text-xl font-bold text-white">The University of Texas Rio Grande Valley</h3>
@@ -189,8 +196,9 @@
             </div>
         </section>
         
+        <!-- 5. My Path (Case Studies) -->
         <section id="casestudies" class="py-20">
-            <h2 class="font-poppins text-3xl sm:text-4xl font-bold text-white text-center" data-lang="casestudies_title">My Path: From Engineer to Educator</h2>
+            <h2 class="section-title" data-lang="casestudies_title">My Path: From Engineer to Educator</h2>
             <p class="section-subtitle" data-lang="casestudies_subtitle">My interest in education grew naturally from my experiences as an engineer and leader. Each step of my journey revealed a new piece of the puzzle.</p>
             <div class="mt-16 space-y-20">
                 <div class="flex flex-col md:flex-row items-center gap-10">
@@ -283,8 +291,9 @@
             </div>
         </section>
         
+        <!-- 6. My Guiding Philosophy -->
         <section id="philosophy" class="py-20">
-            <h2 class="font-poppins text-3xl sm:text-4xl font-bold text-white text-center" data-lang="philosophy_title">My Guiding Philosophy</h2>
+            <h2 class="section-title" data-lang="philosophy_title">My Guiding Philosophy</h2>
             <div class="mt-12 max-w-3xl mx-auto text-center bg-slate-800 p-8 md:p-12 rounded-xl shadow-lg">
                 <h3 class="text-2xl font-poppins font-bold text-white" data-lang="philosophy_subtitle">Learning by Building</h3>
                 <p class="mt-4 text-slate-400 text-lg leading-relaxed" data-lang="philosophy_desc">
@@ -295,6 +304,7 @@
 
     </main>
 
+    <!-- Footer -->
     <footer class="bg-slate-800/50 border-t border-slate-800">
         <div class="container mx-auto px-6 py-12 text-center">
             <h2 class="text-3xl font-bold text-white" data-lang="footer_title">Let's Connect</h2>
